# wrac-plugin-template

./: .gitignore  Cargo.toml  README.md  README_JA.md  styleguide.md
.github/workflows/: ci.yml  smoke-test.yml
clap_wrapper_builder/: CMakeLists.txt  README.md  build_wrapper_plugin.sh
clap_wrapper_builder/clap-wrapper/src/: wrapasvst3.cpp  wrapasvst3.h
cmake/: make_clapfirst.cmake  wrap_standalone.cmake
crates/run_loop_timer/: Cargo.toml
crates/run_loop_timer/src/: lib.rs
crates/wrac_clap_adapter/: Cargo.toml  README.md
crates/wrac_clap_adapter/src/: abi.rs  api.rs  clap.rs  core.rs  descriptor.rs  entry.rs  events.rs  factory.rs  host_gui.rs  lib.rs  params.rs  process_buffer.rs
crates/wrac_log/: Cargo.toml
crates/wrac_log/src/: file_logger.rs  lib.rs  rt.rs
crates/wrac_wxp_gui/: Cargo.toml  README.md
crates/wrac_wxp_gui/src/: controller.rs  dpi.rs  lib.rs  pointer.rs  (+2 more)
crates/wrac_xtask/: Cargo.toml
docs/: aax-ja.md  aax.md  code-review-checklist-ja.md  code-review-checklist.md  product-code-review-checklist-ja.md  product-code-review-checklist.md  production-readiness-checks-ja.md  production-readiness-checks.md  setup-ja.md  setup.md  setup_JA.md
script/: build.sh  uninstall.sh
src/: wrapasauv2.cpp
src-gui/: index.html  vite.config.ts
src-gui/src/: main.ts  style.css
src-plugin/: Cargo.toml  README.md  build.rs
src-plugin/src/: audio.rs  commands.rs  gui.rs  lib.rs  logging.rs  plugin.rs  state.rs
xtask/: Cargo.toml  README.md
xtask/src/: cli.rs  commands.rs  constants.rs  context.rs  main.rs  metadata.rs  targets.rs  util.rs
(+31 files in other folders)
