[package]
name = "run_loop_timer"
version = "0.1.0"
edition = "2024"
authors = ["NovoNotes"]
description = "RunLoop timer helper for the WRAC plugin template"
license = "MIT"
repository = "https://github.com/novonotes/wrac-plugin-template"
readme = "README.md"
publish = false

[dependencies]
novonotes_run_loop = { git = "https://github.com/novonotes/run_loop.git", rev = "2779a6400cc99a8728052ba4df1c475a492849de" }

[dev-dependencies]
serial_test = "3"
